# PageVault

./: .env.example  .gitignore  ANDROID_APP_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  alembic.ini  app.py  bug_report.yml  ci.yml  config.py  desktop.py  docker-compose.yml  feature_request.yml  installer.iss  pagevault.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: android-release.yml  ci.yml  dependabot-automerge.yml  desktop-release.yml
alembic/: env.py
alembic/versions/: 20260305_0001_baseline.py  20260305_0002_location_admin.py
android/: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/pagevault/app/: MainActivity.kt
android/app/src/main/python/: mobile_server.py
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml  splash_window.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
docs/: index.html  stats-demo.html
pagevault_core/: __init__.py  api.py  db.py  metadata.py  tls.py  utils.py
pagevault_core/services/: __init__.py  admin_service.py  recommendations.py
static/: i18n.js  manifest.webmanifest  sw.js
templates/: admin.html  admin_login.html  index.html  reader.html  stats.html
tests/: conftest.py  test_api.py  test_metadata.py  test_tls.py
tools/: make_icon.py  make_selfsigned_cert.ps1  render_icons.py  sign_windows.ps1
