[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pagevault"

version = "1.3.0"

description = "A self-hosted, personal book catalog with ISBN barcode scanning — your local Goodreads alternative."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Christian Abele", email = "christian.abele@uni-bielefeld.de" }]
requires-python = ">=3.10"
keywords = ["books", "catalog", "isbn", "flask", "self-hosted", "library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "flask>=3.0.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
prod = [
    "gunicorn>=22.0",
]

[project.urls]
Homepage    = "https://github.com/ChristianAbele02/PageVault"
Repository  = "https://github.com/ChristianAbele02/PageVault"
Issues      = "https://github.com/ChristianAbele02/PageVault/issues"
Changelog   = "https://github.com/ChristianAbele02/PageVault/blob/main/CHANGELOG.md"

[project.scripts]
pagevault = "app:main"

# ── Ruff (linter + formatter) ──────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source  = ["app.py"]
omit    = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict         = false
ignore_missing_imports = true
